add yarn for nodejs; upgrade pip.conf;

--- a/pip.conf
+++ b/pip.conf
@@ -1,4 +1,4 @@
 [global]
 timeout = 20
-trusted-host = devpi.tuluu.com
-index-url = http://devpi.tuluu.com/guihua/pypi
+trusted-host = devpi.lcgc.io
+index-url = http://devpi.lcgc.io/guihua/pypi
